# Retail-Backtesting-Tool

./: .gitignore  README.md  pyproject.toml
data_cache/: AAPL_152394c632cad8b7.pkl  AMD_b4ae3a51c0e0c86a.pkl  AMZN_f7ba47a7e9c86a2b.pkl  AVGO_810ce0053cefc9d8.pkl  GOOGL_ea81c62b40879e39.pkl  META_29a87c04ea11b1ac.pkl  MSFT_7044e9196d1779ca.pkl  NVDA_d99c1a5949ac3c94.pkl  QQQ_1a45f55620bd9f88.pkl  SPY_22a7bc529f589a12.pkl
output/momentum_rs_v1_2023-01-01_2026-06-30/: equity.csv  round_trips.csv  summary.json  trades.csv  windows.csv
retail_backtest/: __init__.py  __main__.py  data.py
retail_backtest/config/: __init__.py  loader.py  models.py
retail_backtest/engine/: __init__.py  signals.py  simulator.py  stats.py
runs/: run_2023_2026.yaml
strategies/: momentum_rs_v1.yaml
tests/: synth.py  test_config.py  test_data.py  test_engine.py  test_stats.py
