[project]
name = "retail-backtest"
version = "0.1.0"
description = "Backtest-vs-live reconciliation tool for systematic retail strategies"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.7",
    "PyYAML>=6.0",
    "pandas>=2.2",
    "numpy>=1.26",
    "yfinance>=0.2.40",
    "fastapi>=0.111",
    "uvicorn>=0.30",
    "matplotlib>=3.8",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["retail_backtest*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
